# va-pd3r

./: .dockerignore  .env.example  .gitignore  AGENTS.MD  AGENTS_TEMPLATE.MD  CLAUDE.MD  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent_toolkit/: README.md  __init__.py  pyproject.toml
agent_toolkit/core/: __init__.py  config.py  node_analyzer.py  trace_analyzer.py  utils.py
agent_toolkit/prompts/: __init__.py
agent_toolkit/scripts/: test_edge_cases.txt  test_interview.txt  test_long_conversation.txt  test_question_answering.txt
agent_toolkit/tools/: __init__.py  agentscript.py  anode.py  health_check.py  lint.py
docs/: INDEX.md  business_case.md
docs/business_rules/: README.md  drafting_sections.py  fes_factor_levels.json  grade_cutoff_scores.json  gs2210_major_duties_templates.json  intake_fields.py  other_significant_factors.json
docs/decisions/: 003-graph-export.md  004-testing-phase-controls.md  005-no-mock-llm.md  006-llm-driven-routing.md  007-no-heuristic-decisions.md  008-qa-content-caching.md  009-send-message-decomposition.md  010-backend-authoritative-status.md  011-structured-agent-visibility.md  INDEX.md
docs/modules/: INDEX.md  api.md  frontend.md  graphs.md  models.md  nodes.md  prompts.md  tools.md
docs/plans/: architectural_remediation.md  cloud_migration_plan.md  handoff_checklist.md  mvp_roadmap.md
docs/procedures/: INDEX.md  debugging.md  graph-export.md  new-node.md  testing.md
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
knowledge/: README.md
output/: senior_data_scientist_1560_13.md
output/analysis/: anode_full_20260125_153941.md  anode_full_20260125_163654.md  anode_full_20260126_170201.md  anode_full_20260126_170359.md  anode_qa_review_node_sync_20260125_144244.md  baseline_pre_optimization.md  (+1 more)
scripts/: analyze_trace.py  capture_test_states.py  compare_traces.py  dev.sh  ingest_knowledge.py  run_e2e_test.py  test_question_answering.py  test_rag.py
src/: __init__.py  constants.py  exceptions.py  main.py  validation.py
tests/: conftest.py  test_api.py  test_api_transforms.py  test_context_builders.py  test_drafting_tools.py  test_e2e.py  test_element_tracker.py  test_error_handler_node.py  test_error_handling.py  test_error_recovery.py  test_integration_foundation.py  test_integration_rag.py  test_interrupt_flow.py  test_interview_tools.py  test_lite_classifier.py  test_node_answer_question.py  test_node_check_complete.py  test_node_export.py  test_node_fes.py  test_node_finalize.py  test_node_init.py  test_node_map_answers.py  test_node_prepare_next.py  test_node_write_another.py  test_parallel_generation.py  test_qa_tools.py  test_routing_completeness.py  test_state_compaction.py  test_structured_actions.py  test_tier_generation.py  test_unit_document.py  test_unit_draft.py  test_unit_duties.py  test_unit_export.py  test_unit_fes.py  test_unit_intent.py  test_unit_interview.py  test_unit_models.py  test_unit_nodes.py  test_unit_personality.py  (+3 more)
(+123 files in other folders)
